<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:text="@string/can1" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="4dp"
        android:layout_y="98dp"
        android:text="@string/can2" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="3dp"
        android:layout_y="201dp"
        android:text="@string/can3" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="17dp"
        android:layout_y="36dp"
        android:text="@string/tv4"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="17dp"
        android:layout_y="134dp"
        android:text="@string/tv6"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnLlamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="65dp"
        android:layout_y="352dp"
        android:onClick="llamar"
        android:text="@string/btnLlamar" />

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="180dp"
        android:layout_y="351dp"
        android:onClick="finalizar"
        android:text="@string/btnAtras" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="22dp"
        android:layout_y="235dp"
        android:text="@string/tv8"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</AbsoluteLayout>