<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/dia" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et1"
        android:layout_marginTop="19dp"
        android:text="@string/hora" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et1"
        android:layout_below="@+id/tv2"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="time" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAgregar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:onClick="buscarTurnos"
        android:text="@string/btnBuscar" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnBorrar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="agregarTurno"
        android:text="@string/btnAgrturno" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBuscar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:onClick="borrarTurnos"
        android:text="@string/btnBorrar" />

</RelativeLayout>
