<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="62dp"
        android:layout_marginRight="64dp"
        android:onClick="finalizar"
        android:text="@string/btnAtras" />

    <Button
        android:id="@+id/btnLlamar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnFin"
        android:layout_alignBottom="@+id/btnFin"
        android:layout_toLeftOf="@+id/quickContactBadge1"
        android:onClick="llamar"
        android:text="@string/btnLlamar" />

    <QuickContactBadge
        android:id="@+id/quickContactBadge1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="102dp"
        android:layout_toLeftOf="@+id/btnFin" />

    <TextView
        android:id="@+id/tvLlamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="43dp"
        android:text="@string/tv_contacto" />

</RelativeLayout>
